// api/protobufs/user.proto
syntax = "proto3";

package user;

// Go package path for generated code
option go_package = "github.com/datngth03/ecommerce-go-app/pkg/client/user;user_client";

// Import for standard types like Timestamp
import "google/protobuf/timestamp.proto";
// import "google/protobuf/struct.proto";

// =======================
// Service Definition
// =======================
service UserService {
 // User account operations
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);

  // Profile operations
  rpc GetUserProfile(GetUserProfileRequest) returns (UserProfileResponse);
  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UserProfileResponse);

  // Password management
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);

  // Address management
  rpc AddAddress(AddAddressRequest) returns (AddressResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns (AddressResponse);
  rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse);
  rpc ListAddresses(ListAddressesRequest) returns (ListAddressesResponse);

  // Order history
  rpc GetOrderHistory(GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
}

// =======================
// User Account Messages
// =======================
message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message RegisterUserResponse {
  string user_id = 1;
  string message = 2;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string user_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  UserProfileResponse user = 1;
}

// =======================
// Profile Messages
// =======================
message GetUserProfileRequest {
  string user_id = 1;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone_number = 4;
  string avatar = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  string gender = 7;
}

message UserProfileResponse {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone_number = 5;
  string avatar = 6;
  google.protobuf.Timestamp date_of_birth = 7;
  string gender = 8;
  bool is_verified = 9;
  bool is_phone_verified = 10;
  bool is_active = 11;
  repeated Address addresses = 12; // Danh sách địa chỉ
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

// =======================
// Password Management
// =======================
message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  string message = 1;
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  string message = 1;
}

// =======================
// Address Management
// =======================
message Address {
  string id = 1;
  string user_id = 2;
  string type = 3;
  string name = 4; // Tương ứng với full_name trong schema cũ
  string address_line = 5; // Tương ứng với street_address trong schema cũ
  string city = 6;
  string state = 7;
  string zip_code = 8;
  string country = 9;
  bool is_default = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message AddAddressRequest {
  string user_id = 1;
  Address address = 2;
}

message UpdateAddressRequest {
  string user_id = 1;
  Address address = 2;
}

message DeleteAddressRequest {
  string user_id = 1;
  string address_id = 2;
}

message AddressResponse {
  Address address = 1;
}

message DeleteAddressResponse {
  string message = 1;
}

message ListAddressesRequest {
  string user_id = 1;
}

message ListAddressesResponse {
  repeated Address addresses = 1;
}

// =======================
// Order History
// =======================
message Order {
  string order_id = 1;
  int64 order_date = 2;
  string status = 3;
  double total_amount = 4;
}

message GetOrderHistoryRequest {
  string user_id = 1;
}

message GetOrderHistoryResponse {
  repeated Order orders = 1;
}
